--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="azul_escuro">#0E73B4</color>
+    <color name="azul_medio">#57B3DF</color>
+    <color name="azul_claro">#84C7E2</color>
+    <color name="verde">#6CB57D</color>
 </resources>
