Atualização do projeto.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="azul_medio">#57B3DF</color>
     <color name="azul_claro">#84C7E2</color>
     <color name="verde">#6CB57D</color>
+    <color name="bordo">#A71500</color>
 </resources>
