--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ToyaPedidos" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ToyaPedidos" parent="Theme.Material3.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/azul_claro</item>
         <item name="colorPrimaryVariant">@color/azul_medio</item>
@@ -19,7 +19,9 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.ToyaPedidos.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <!-- <style name="Theme.ToyaPedidos.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" /> -->
+    <style name="Theme.ToyaPedidos.AppBarOverlay" parent="ThemeOverlay.Material3.Dark" />
 
-    <style name="Theme.ToyaPedidos.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <!-- <style name="Theme.ToyaPedidos.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />-->
+    <style name="Theme.ToyaPedidos.PopupOverlay" parent="ThemeOverlay.Material3.Light" />
 </resources>
