--- a/app/src/main/res/layout/activity_cadastra_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastra_usuario.xml
@@ -6,14 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".CadastraUsuarioActivity">
 
-
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/txtNomeAplicativo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textSize="50sp"
-        android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -73,17 +72,6 @@
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/txtRecuperaSenha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textSize="20sp"
-        android:text="@string/stringRecuperaSenha"
-        app:layout_constraintEnd_toEndOf="@+id/txtSenhaCadastraUsuario"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintTop_toBottomOf="@+id/txtSenhaCadastraUsuario" />
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnCadastrarUsuario"
         android:layout_width="0dp"
@@ -94,7 +82,7 @@
         android:text="@string/stringCadastrar"
         app:layout_constraintStart_toStartOf="@id/txtSenhaCadastraUsuario"
         app:layout_constraintEnd_toEndOf="@+id/txtSenhaCadastraUsuario"
-        app:layout_constraintTop_toBottomOf="@+id/txtRecuperaSenha"/>
+        app:layout_constraintTop_toBottomOf="@+id/txtSenhaCadastraUsuario"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
