--- a/app/src/main/res/layout/activity_entra_usuario.xml
+++ b/app/src/main/res/layout/activity_entra_usuario.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtNomeUsuario"
+        android:id="@+id/txtEmailEntraUsuario"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="32dp"
@@ -29,51 +29,51 @@
         app:layout_constraintTop_toBottomOf="@id/txtNomeAplicativo">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edtNomeUsuario"
+            android:id="@+id/edtEmailEntraUsuario"
             android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtSenhaUsuario"
+        android:id="@+id/txtSenhaEntraUsuario"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:hint="@string/stringSenha"
         app:passwordToggleEnabled="true"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
-        app:layout_constraintEnd_toEndOf="@id/txtNomeUsuario"
-        app:layout_constraintStart_toStartOf="@id/txtNomeUsuario"
-        app:layout_constraintTop_toBottomOf="@+id/txtNomeUsuario">
+        app:layout_constraintEnd_toEndOf="@id/txtEmailEntraUsuario"
+        app:layout_constraintStart_toStartOf="@id/txtEmailEntraUsuario"
+        app:layout_constraintTop_toBottomOf="@+id/txtEmailEntraUsuario">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edtSenhaUsuario"
+            android:id="@+id/edtSenhaEntraUsuario"
             android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/txtRecuperaSenha"
+        android:id="@+id/txtRecuperaSenhaUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textSize="20sp"
         android:text="@string/stringRecuperaSenha"
-        app:layout_constraintEnd_toEndOf="@+id/txtSenhaUsuario"
+        app:layout_constraintEnd_toEndOf="@+id/txtSenhaEntraUsuario"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintTop_toBottomOf="@+id/txtSenhaUsuario" />
+        app:layout_constraintTop_toBottomOf="@+id/txtSenhaEntraUsuario" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnEntra"
+        android:id="@+id/btnEntraUsuario"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:textSize="28sp"
         android:textAllCaps="false"
         android:text="@string/stringEntrar"
-        app:layout_constraintStart_toStartOf="@id/txtSenhaUsuario"
-        app:layout_constraintEnd_toEndOf="@+id/txtSenhaUsuario"
-        app:layout_constraintTop_toBottomOf="@+id/txtRecuperaSenha"/>
+        app:layout_constraintStart_toStartOf="@id/txtSenhaEntraUsuario"
+        app:layout_constraintEnd_toEndOf="@+id/txtSenhaEntraUsuario"
+        app:layout_constraintTop_toBottomOf="@+id/txtRecuperaSenhaUsuario"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
