Atualização na visualização de títulos dos fragmentos.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,7 +13,9 @@
             android:icon="@drawable/ic_menu_cardapio"
             android:title="@string/menu_cardapio" />
     </group>
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/navGrupo2"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/navSair"
             android:icon="@drawable/ic_menu_sair"
