--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_pedidos">
+    app:startDestination="@+id/navPedidos">
 
     <fragment
-        android:id="@+id/nav_pedidos"
+        android:id="@+id/navPedidos"
         android:name="com.example.toyapedidos.ui.pedidos.FragmentoPedidos"
         android:label="@string/menu_pedidos"
         tools:layout="@layout/fragmento_pedidos" />
 
     <fragment
-        android:id="@+id/nav_cardapio"
+        android:id="@+id/navCardapio"
         android:name="com.example.toyapedidos.ui.cardapio.FragmentoCardapio"
         android:label="@string/menu_cardapio"
         tools:layout="@layout/fragmento_cardapio" />
