--- a/app/src/main/res/layout/item_produto.xml
+++ b/app/src/main/res/layout/item_produto.xml
@@ -3,41 +3,52 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    style="@style/CardView"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    style="@style/Widget.Material3.CardView.Outlined"
     android:id="@+id/cardViewProduto">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/itemNomeProduto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            android:padding="8dp"
+            android:gravity="start"
+            android:textStyle="bold"
+            android:textSize="22sp"
+            android:maxLines="1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/itemValorProduto"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Nome"/>
+
         <TextView
             android:id="@+id/itemDescricaoProduto"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            app:layout_constraintStart_toStartOf="@id/itemNomeProduto"
-            app:layout_constraintEnd_toEndOf="@id/itemNomeProduto"
-            app:layout_constraintTop_toBottomOf="@id/itemNomeProduto"
+            android:gravity="start"
+            android:padding="8dp"
+            android:layout_marginBottom="8dp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:text="Descrição"/>
+            app:layout_constraintEnd_toEndOf="@id/itemValorProduto"
+            app:layout_constraintStart_toStartOf="@id/itemNomeProduto"
+            app:layout_constraintTop_toBottomOf="@id/itemNomeProduto"
+            tools:text="Descrição" />
         <TextView
             android:id="@+id/itemValorProduto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            app:layout_constraintStart_toEndOf="@id/itemNomeProduto"
+            android:padding="8dp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/itemNomeProduto"
-            app:layout_constraintBottom_toBottomOf="@+id/itemNomeProduto"
-            tools:text="Descrição"/>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Valor"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
