--- a/app/src/main/res/layout/activity_adiciona_novo_pedido.xml
+++ b/app/src/main/res/layout/activity_adiciona_novo_pedido.xml
@@ -13,6 +13,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_novo_pedido"
         app:layout_constraintBottom_toTopOf="@id/txtTotalPedido"/>
 
     <TextView
