--- a/app/src/main/res/layout/activity_cadastra_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastra_usuario.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CadastraUsuarioActivity">
+    tools:context=".ui.activity.CadastraUsuarioActivity">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/txtNomeAplicativo"
