--- a/app/src/main/res/layout/item_novo_pedido.xml
+++ b/app/src/main/res/layout/item_novo_pedido.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Widget.Material3.CardView.Outlined"
+    android:theme="@style/Theme.Material3.DayNight"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp">
@@ -53,7 +55,7 @@
             app:layout_constraintTop_toBottomOf="@id/itemDescricaoNovoPedido"
             tools:text="Valor" />
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/itemBtnSomaQuantidade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -74,7 +76,7 @@
             app:layout_constraintEnd_toStartOf="@+id/itemBtnSomaQuantidade"
             app:layout_constraintTop_toTopOf="@+id/itemBtnSomaQuantidade" />
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/itemBtnSubtraiQuantidade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -83,4 +85,4 @@
             app:layout_constraintTop_toTopOf="@+id/itemQuantidadeNovoPedido"
             app:srcCompat="@drawable/ic_subtrai" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
