--- a/app/src/main/res/layout/item_novo_pedido.xml
+++ b/app/src/main/res/layout/item_novo_pedido.xml
@@ -7,7 +7,9 @@
     android:theme="@style/Theme.Material3.DayNight"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginTop="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
