--- a/app/src/main/res/layout/item_pedido.xml
+++ b/app/src/main/res/layout/item_pedido.xml
@@ -23,32 +23,15 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/itemIdPedido"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:gravity="start"
-                android:maxLines="1"
-                android:padding="8dp"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="ID pedido" />
-
-            <TextView
                 android:id="@+id/itemNumeroMesaPedido"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:padding="8dp"
-                android:textSize="18sp"
-                android:layout_marginBottom="16dp"
-                app:layout_constraintEnd_toEndOf="@+id/itemIdPedido"
-                app:layout_constraintStart_toStartOf="@id/itemIdPedido"
-                app:layout_constraintTop_toBottomOf="@id/itemIdPedido"
+                android:layout_margin="8dp"
+                android:textSize="22sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 tools:text="Número" />
 
@@ -78,7 +61,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:textSize="20sp"
+                android:textSize="22sp"
+                android:padding="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
